rest: quick code review